--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,7 @@
-[
-	{
+{
+	"server": {
 		//url:"localhost/bichos/",
-		"url":"http://127.0.0.1/bichos/"
+		"url":"http://localhost/bichos/"
 	}
-]
+
+}
